refactor: Downgrade java version from 22 to 21 in order to avoid using a string template